bitfields/tests/compile_error_cases/bitfield_field_access_write_only_builder.stderr
error[E0599]: no method named `a` found for struct `BitfieldBuilder` in the current scope
  --> tests/compile_error_cases/bitfield_field_access_write_only_builder.rs:14:14
   |
 6 | #[bitfield(u32)]
   | ---------------- method `a` not found for this struct
...
14 |     bitfield.a(); // Error, field is write-only
   |              ^ method not found in `BitfieldBuilder`
